appId: com.jhon_steven_23.DeficienciasVialesJhonn
---
- launchApp:
    clearState: false

- extendedWaitUntil:
    visible: "USUARIO"
    timeout: 5000

- assertVisible: "USUARIO"
- assertVisible: "@"

- swipe:
    direction: UP
    duration: 500

- swipe:
    direction: DOWN
    duration: 500

- tapOn:
    index: 0

- extendedWaitUntil:
    visible: "Informes"
    timeout: 5000
